--- a/package.json
+++ b/package.json
@@ -3,8 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "webpack-dev-server --open",
+    "build": "webpack --config webpack.config.js -p"
+  },
   "dependencies": {
-    "single-spa": "^4.4.1"
+    "evergreen-ui": "^4.21.5",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "single-spa": "^4.4.1",
+    "single-spa-react": "^2.11.0",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
@@ -13,6 +23,7 @@
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.0",
     "html-loader": "^0.5.5",
     "style-loader": "^1.0.2",
