--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --open",
+    "start": "webpack-dev-server",
     "build": "webpack --config webpack.config.js -p"
   },
   "dependencies": {
@@ -27,6 +27,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.0",
     "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.0.2",
     "webpack": "^4.41.3",
     "webpack-cli": "^3.3.10",
